Fix typo and update swagger with stats api
